--- a/charts/helm_cnv1/Chart.yaml
+++ b/charts/helm_cnv1/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
-name: cn-series
+name: pan-cn-k8s-daemonset
 description: Palo Alto Networks CN-Series firewall Helm chart for Kubernetes  
 
 # A chart can be either an 'application' or a 'library' chart.
